--- a/document-viewer-app/document-viewer-app.csproj
+++ b/document-viewer-app/document-viewer-app.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.RichEdit" Version="22.1.6" />
+    <PackageReference Include="DevExpress.RichEdit.Core" Version="22.1.6" />
   </ItemGroup>
 
 </Project>
